# real-estate-talent-screening

./: .env.example  Dockerfile  README.md  check_models.js  check_models.ts  codegrab-output.md  docker-compose.yml  fetch_kaggle_data.py  fetch_output.txt  package-lock.json  package.json  turbo.json
backend/: Dockerfile  main.py  package.json  pyproject.toml
backend/api/: websockets.py
backend/api/routes/: candidate.py  evaluation.py  generation.py  questions.py  reports.py  sessions.py
backend/core/: config.py  redis.py
backend/db/: models.py  session.py
backend/tests/: test_evaluation.py  test_integration.py
devinfra/: docker-compose.yml
docs/: guide.md
docs/chore-ts-migration/: implementation_plan.md  progress.md  task.md  walkthrough.md
docs/mvp/: implementation_plan.md  task.md  walkthrough.md
docs/phase_1/: docker-compose.yml  implementation_plan.md  task.md  walkthrough.md
docs/phase_2/: conversation.md  implementation_plan.md  progress.md  task.md  walkthrough.md
frontend/: Dockerfile  build_log.txt  eslint.config.ts  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.jsx  App.test.jsx  App.tsx  index.css  sanity.test.js
frontend/src/components/: ui.jsx  ui.tsx
frontend/src/data/: assessmentData.js  assessmentData.ts  kaggleQuestions.json
frontend/src/pages/: Admin.tsx  Profile.tsx
frontend/src/services/: api.js  api.ts
frontend/src/test/: setup.js  setup.ts
src/: App.jsx
src/components/: ui.jsx
src/services/: api.js
(+5 files in other folders)
